--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div id="quiz">
             <div id="timer">Time left: </div>
-                <div id="questions"><p>Questions Placeholder</p></div>
+                <div id="questions"><p>Questions</p></div>
                     <button id="a" onclick="checkAnswer('a')">A</button>
                     <button id="b" onclick="checkAnswer('b')">B</button>
                     <button id="c" onclick="checkAnswer('c')">C</button>
